--- a/for_organization.html
+++ b/for_organization.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style_header.css">
     <link rel="stylesheet" href="css/style_first_block_with_photo_and_send_form.css">
     <link rel="stylesheet" href="css/style_enter_to_organization.css">
+    <link rel="stylesheet" href="css/style_text_on_organization_page.css">
     <link rel="stylesheet" href="css/style_content_on_main_page.css">
     <link rel="stylesheet" href="css/style_send_white_form.css">
     <link rel="stylesheet" href="css/style_send_form.css">
@@ -31,7 +32,7 @@
                     <a href="our_services.html" class="top_menu_link">Наши услуги</a>
                     <a href="about_us.html" class="top_menu_link">О нас</a>
                     <a href="comments.html" class="top_menu_link">Отзывы</a>
-                    <a href="how_we_work.html" class="top_menu_link">Методы работы</a>
+                    <a href="methods_work.html" class="top_menu_link">Методы работы</a>
                     <a href="question-answer.html" class="top_menu_link">Вопрос-ответ</a>
                 </div>
                 <div class="col-lg-4 top_black_block text-center">
@@ -58,28 +59,25 @@
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дезинсекция</a>
+                                <a class="nav-link nav-link-text" href="dezincekciya.html">Дезинсекция</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дератизация</a>
+                                <a class="nav-link nav-link-text" href="deratizaciya.html">Дератизация</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дезинфекция</a>
+                                <a class="nav-link nav-link-text" href="desinphekciya.html">Дезинфекция</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Десерпентация</a>
+                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Фумигация</a>
+                                <a class="nav-link nav-link-text" href="phymigaciya.html">Фумигация</a>
                             </li>  
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
+                                <a class="nav-link nav-link-text active" href="for_organization.html">Для организаций</a>
                             </li>
-                            <!-- <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Акции</a>
-                            </li> -->
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Контакты</a>
+                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
@@ -92,7 +90,7 @@
 
     <!-- Блок с фото и формой после хедера -->
     <!-- НАЧАЛО -->
-    <div class="container-fluid first_block__photo">
+    <div class="container-fluid first_block__photo" style="background-image: url(img/тест.png);">
         <div class="container">
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
@@ -164,31 +162,7 @@
     </div>
     <!-- КОНЕЦ -->
 
-    <!-- ФОрма на прозрачном фоне -->
-    <!-- НАЧАЛО -->
-    <div class="container container_of_the_white_form">
-        <h4>Заполните форму и получите персональное предложение</h4>
-        <div class="row g-4">
-            <div class="col-lg-3 col-md-4">
-                <input type="text" class="ml-3 form-control container_of_the_white_form__input" placeholder="Имя" aria-label="First name" required>
-            </div>
-            <div class="col-lg-3 col-md-4 m-auto mt-4">
-                <input type="number" class="form-control container_of_the_white_form__input" placeholder="Номер телефона для связи" aria-label="Last name" required>
-            </div>
-            <div class="col-lg-3 col-md-4">
-                <input type="text" class=" form-control container_of_the_white_form__input" placeholder="Почта" aria-label="Last name" required>
-            </div>
-        </div>
-        <div class="row">
-            <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
-        </div>
-    </div>
-    <div class="container">
-        <div class="hr"></div>
-    </div>
-    <!-- КОНЕЦ -->
-
-    <!-- Главное содержание страницы -->
+    <!-- Главное содержание страницы --> 
     <!-- НАЧАЛО -->
     <div class="container content-on-main-page">
         <h1>Специализация <strong><span>ДЕЗ</span>САН</strong></h1>
@@ -206,7 +180,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">дезинфекция</h3>
-                            <p class="one_card__content">Имеют сильно сплющенное сегментированное тельце. Его форма варьируется от округлой до веретенообразной</p>
+                            <p class="one_card__content">Обработка от грибка, плесени и их спор</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -222,7 +196,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">дератизация</h3>
-                            <p class="one_card__content">Клещи становятся особенно активными в апреле, а заканчивается сезон их активности в сентябре. В длину самцы этих паразитов</p>
+                            <p class="one_card__content">Обработка от мышей, крыс, кротов, землероек</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -238,7 +212,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">дезинсекция</h3>
-                            <p class="one_card__content">Комары являются переносчиками опасных заболеваний: малярии, жёлтой лихорадки, денге и некоторых энцефалитов</p>
+                            <p class="one_card__content">Обработка от всех видов вредных насекомых</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -254,7 +228,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">дезодорация</h3>
-                            <p class="one_card__content">Тараканы - самые известные насекомые-паразиты. Не обладают кровососущей способностью и не повреждают продуктов, но являются</p>
+                            <p class="one_card__content">Защита и обработка от змей.</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -270,7 +244,7 @@
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">десерпентация</h3>
-                            <p class="one_card__content">Тараканы - самые известные насекомые-паразиты. Не обладают кровососущей способностью и не повреждают продуктов, но являются</p>
+                            <p class="one_card__content">Обработка деревянных строений от всех видов вредителей (взрослых особей и личинок)</p>
                             <p class="one_card__link">Узнать больше...</p>
                         </div>
                     </a>
@@ -293,11 +267,38 @@
                 </div>
             </div>
         </div>
-
-
+        <div class="hr"></div>
     </div>
     <!-- КОНЕЦ -->
 
+    <!-- Текст на странице под карточками -->
+    <!-- НАЧАЛО -->
+    <div class="container text_on_organization_page">
+        <div class="text_on_organization_page__container">
+            <p class="text_on_organization_page__text">
+                Мы работаем в офисных помещениях, чердаках, подвалах, складах, цехах, на природе – в любых местах, где потенциально могут завестись или по факту обнаружены вредители.
+            </p>
+            <p class="text_on_organization_page__text">
+                В работе используем только химические методы, которые доказали свою эффективность и безопасность. Часто достаточно комплексной обработки генератором холодного и горячего тумана. В отдельных случаях используется фумигация и газация. 
+            </p>
+            <p class="text_on_organization_page__text">
+                Оформляем санитарные документы: договор о обеззараживании транспортного средства, составляем программу производственного контроля, обеспечиваем экозащиту для с\х предприятий и агро бизнеса. 
+            </p>
+            <p class="text_on_organization_page__text">
+                Услуги по дератизации и  дезинсекции для организаций помимо обработки помещения включают в себя первичное обследование объекта, в том числе, чердаки и подвалы, в ходе которого вычисляется степень зараженности вредителями, их пути миграции, основные очаги локализации и размножения. В каждом отдельном случае специалист индивидуально подбирает комплекс мероприятий и затем дает дальнейшие рекомендации против повторного появления вредителей. 
+            </p>
+            <p class="text_on_organization_page__text">
+                За более 10 лет работы мы помогли сотням организаций избавиться от вредителей. Тем самым спасли их продукцию, имущество, а главное, репутацию. Ведь убытки, нанесенные насекомыми и грызунами, никто никогда не будет возмещать.
+            </p>
+            <p class="text_on_organization_page__text">
+                Если организация занимает лишь часть офисных помещений в бизнес-центре, рекомендуем объединиться и совместно заказать услуги дезинфекции, дератизации и дезинсекции юридическим лицам. Так как цена напрямую зависит от площади – это будет намного дешевле.
+            </p>
+            <p class="text_on_organization_page__text">
+                <a href="contacts.html" class="enter__link">Свяжитесь с нами</a>, чтобы раз и навсегда избавиться от вредителей!
+            </p>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
 
     <!-- Форма отправки имя/телефона/почты -->
     <!-- НАЧАЛО -->
