--- a/methods_work.html
+++ b/methods_work.html
@@ -6,21 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
 
-    <title>Наши услуги</title>
+    <title>Методы работы</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
     <link rel="stylesheet" href="css/style_header.css">
     <link rel="stylesheet" href="css/style_for_all.css">
-    <link rel="stylesheet" href="css/style_main_on_the_page.css">
-    <link rel="stylesheet" href="css/style_content_on_main_page.css">
+    <link rel="stylesheet" href="css/style_methods_work.css">
     <link rel="stylesheet" href="css/style_send_form.css">
-    <link rel="stylesheet" href="css/style_send_white_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
     <link rel="stylesheet" href="css/style_footer.css">
 </head>
 <body>
-
     <!-- Верхнее меню на странице с названием фирмы и навигацией -->
     <!-- НАЧАЛО -->
     <div class="container-fluid top_black_menu">
@@ -57,28 +54,25 @@
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дезинсекция</a>
+                                <a class="nav-link nav-link-text" href="dezincekciya.html">Дезинсекция</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дератизация</a>
+                                <a class="nav-link nav-link-text" href="deratizaciya.html">Дератизация</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дезинфекция</a>
+                                <a class="nav-link nav-link-text" href="desinphekciya.html">Дезинфекция</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Десерпентация</a>
+                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Фумигация</a>
+                                <a class="nav-link nav-link-text" href="phymigaciya.html">Фумигация</a>
                             </li>  
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Для организаций</a>
+                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
                             </li>
-                            <!-- <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Акции</a>
-                            </li> -->
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Контакты</a>
+                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
@@ -89,9 +83,40 @@
     </div>
     <!-- КОНЕЦ -->
 
+    <!-- Методы работы -->
+    <!-- НАЧАЛО -->
+    <div class="container methods_work__container">
+        <div class="methods_work__content">
+            <p class="methods_work__main_text">Методы работы</p>
+            <div class="hr"></div>
+            <p class="methods_work__text">Наша компания применяются специальные ядохимикаты которые борются не только с вредителями, но и их потомством. </p>
+            <p class="methods_work__main_text">Виды инсектицидов</p>
+            <p class="methods_work__text">В зависимости от вида, подразделяются на инсектициды (универсальные средства для выведения насекомых), акарициды, или инсектоакарициды (для уничтожения клещей) и пестициды (для избавления от вредителей и некоторых видов сорных растений). В зависимости от фазы развития, подразделяются на овициды (против яиц), лаврициды (против личинок) и имагоциды (против взрослых насекомых). По типу взаимодействия подразделяются на контактные – действующие через хитиновый покров, фумигантные – вызывающие паралич дыхания, кишечные – воздействующие на органы пищеварения.</p>
+            <p class="methods_work__main_text">Требования к инсектицидам</p>
+            <p class="methods_work__text">Главное требование ко всем видам инсектицидов – низкая токсичность для человека и домашних животных. Согласно требованиям МОЗ Украины , токсичность препаратов подразделяется на 4 группы от чрезвычайно до мало опасных.</p>
+            <p class="methods_work__main_text">Классическая дезинсекция</p>
+            <p class="methods_work__text">Под этим методом подразумевается механическое распыление раствора инсектицида с помощью опрыскивателя в помещении или на участке. Крупные частицы препарата размером более 100 микрон попадают на различные поверхности, растения, почву. Инсектициды особенно эффективны в видимых местах скопления насекомых. Препараты имеют длительное пролонгирующее действие – те насекомые, которые спрятались от обработки, рано или поздно выходят из своих укрытий и соприкасаются с препаратом, который сразу же на них воздействует. То же самое касается только вылупившихся личинок из яиц и взрослых имаго из куколок.</p>
+            <p class="methods_work__main_text">Генерация холодным туманом</p>
+            <p class="methods_work__text">Холодный туман вырабатывается с помощью ULV-генератора, оснащенным специальным компрессором, подающим препарат под низким давлением. Частицы инсектициды размером от 20 до 80 микрон долго висят в воздухе, проникая во все потайные щели, куда невозможно проникнуть самостоятельно. Данным методом можно уничтожить тех насекомых, которые практически не появляются из укрытия./p>
+            <p class="methods_work__main_text">Генерация горячим туманом</p>
+            <p class="methods_work__text">Горячий туман также вырабатывается ULV-генератором, причем дозировку и концентрацию инсектицида можно регулировать температурой до 90°C. Частицы размером всего несколько микрон могут висеть в воздухе до 10 часов, проникая в шахты вентиляции, поры, щели, невидимые глазу укрытия. При обработке уничтожаются не только взрослые имаго, но и личинки, яйца и куколки.</p>
+            <p class="methods_work__main_text">Фумигация</p>
+            <p class="methods_work__text">Для фумигации от вредителей используют различные вещества – аэрозоли, туманы, дым, СВЧ. Наиболее эффективной и передовой технологией в обработке помещения от короеда, жука-точильщика, усача, а так же их личинок,  является фумигация фосфином.</p>
+            <p class="methods_work__text">Фосфин - ядовитый газ, который выделяется при фумигации дома , тяжелее воздуха в 1,5 раза и является смертельно опасным для всех жуков, которые поражают древесину. Он проникает в структуру дерева, убивает вредителей внутри, при этом, не разрушая её. Его применяют даже для дезинсекции</p>
+            <p class="methods_work__text">Для борьбы с вредителями, портящими запасы хлеба и зерна, применяются комплексную фумигацию. Подобные меры принимают на предприятиях агропромышленного комплекса, чтобы обеспечить сохранность запасов и их высокое качество. Фосфин обладает высокой фумигационной активностью и позволяет избавится от вредителей запасов в труднодоступных местах./p>
+            <p class="methods_work__main_text">Фогация</p>
+            <p class="methods_work__text">Фогация – это общее название методов уничтожения насекомых методом горячего и холодного тумана.</p>
+            <p class="methods_work__main_text">Газация</p>
+            <p class="methods_work__text">Газация – это метод уничтожения насекомых от личинки до имаго, крыс и мышей в складах с зерном, может использоваться в комплексе с методом Фумигации. Сильнодействующие вещества токсичны для насекомых, но при этом никак не воздействуют на продукцию. Время обработки занимает 20-40 минут, а в помещение можно безопасно заходить уже через 2-3 часа.</p>
+            <p class="methods_work__main_text">Акарицидная обработка</p>
+            <p class="methods_work__text">Акарицидная обработка – это обработка открытой территории против клещей: в парках, дачных участках, прилегающих к ним территориях. Инсектициды парализуют дыхание, уничтожают наружный покров. Все препараты специалист применяет индивидуально после предварительного обследования участка, который необходимо обработать.</p>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+
     <!-- Форма отправки имя/телефона/почты -->
     <!-- НАЧАЛО -->
-    <div id="send_form" class="container-fluid pb-2 mb-5">
+    <div id="send_form" class="container-fluid pb-2">
         <div class="container container_of_the_form">
             <h4>Заполните форму и получите персональное предложение</h4>
             <div class="row g-4">
@@ -107,73 +132,6 @@
             </div>
             <div class="row">
                 <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
-            </div>
-        </div>
-    </div>
-    <!-- КОНЕЦ -->
-
-    <!-- Контент страницы -->
-    <!-- НАЧАЛО -->
-    <div class="container-fluid our_services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center h1">
-                    <span class="our_services__main_text">Уничтожение и выведение грызунов и насекомых</span>
-                </div>
-                <div class="offset-lg-3 col-lg-6 offset-md-2 col-md-7">
-                    <div class="hr"></div>
-                </div>
-                <div class="offset-lg-3 col-lg-6 offset-md-2 col-md-7 text-center">
-                    <p class="our_services__text">Мы - команда профессионалов с многолетним опытом работы в области дезинсекции, дератизации и медицинской дезинфекции</p>
-                </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/home.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для квартир</h3>
-                                <p class="one_card__content">Выведение насекомых, грызунов, плесени и грибка в квартирах</p>
-                                <p class="one_card__link">Узнать больше...</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/country.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для загородных участков</h3>
-                                <p class="one_card__content">уничтожение вредителей на загородных участках</p>
-                                <p class="one_card__link">Узнать больше...</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/home.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для организаций</h3>
-                                <p class="one_card__content">Услуги по дезинсекции, дератации, дезодорации для организаций. Все виды сандокументов. </p>
-                                <p class="one_card__link">Узнать больше...</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -346,6 +304,6 @@
         </div>
     </footer>
     <!-- КОНЕЦ -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
-</html>
