--- a/question-answer.html
+++ b/question-answer.html
@@ -27,7 +27,7 @@
                     <a href="our_services.html" class="top_menu_link">Наши услуги</a>
                     <a href="about_us.html" class="top_menu_link">О нас</a>
                     <a href="comments.html" class="top_menu_link">Отзывы</a>
-                    <a href="how_we_work.html" class="top_menu_link">Методы работы</a>
+                    <a href="methods_work.html" class="top_menu_link">Методы работы</a>
                     <a href="question-answer.html" class="top_menu_link">Вопрос-ответ</a>
                 </div>
                 <div class="col-lg-4 top_black_block text-center">
