--- a/dezincekciya.html
+++ b/dezincekciya.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="SHORTCUT ICON" href="img/dezodoracija.png" type="image/x-icon">
 
-    <title>Наши услуги</title>
+    <title>Дезинсекция</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
     <link rel="stylesheet" href="css/style_header.css">
     <link rel="stylesheet" href="css/style_for_all.css">
-    <link rel="stylesheet" href="css/style_main_on_the_page.css">
-    <link rel="stylesheet" href="css/style_content_on_main_page.css">
+    <link rel="stylesheet" href="css/style_enter_to_dezincekciya.css">
+    <link rel="stylesheet" href="css/style_first_block_with_photo_and_send_form.css">
+    <link rel="stylesheet" href="css/style_content_on_main_page.css ">
     <link rel="stylesheet" href="css/style_send_form.css">
-    <link rel="stylesheet" href="css/style_send_white_form.css">
     <link rel="stylesheet" href="css/style_garantiya.css">
+    <link rel="stylesheet" href="css/style_pest-control.css">
     <link rel="stylesheet" href="css/style_footer.css">
 </head>
 <body>
@@ -57,28 +58,25 @@
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дезинсекция</a>
+                                <a class="nav-link nav-link-text active" href="dezincekciya.html">Дезинсекция</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дератизация</a>
+                                <a class="nav-link nav-link-text" href="deratizaciya.html">Дератизация</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дезинфекция</a>
+                                <a class="nav-link nav-link-text" href="desinphekciya.html">Дезинфекция</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Десерпентация</a>
+                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Фумигация</a>
+                                <a class="nav-link nav-link-text" href="phymigaciya.html">Фумигация</a>
                             </li>  
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Для организаций</a>
+                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
                             </li>
-                            <!-- <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Акции</a>
-                            </li> -->
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Контакты</a>
+                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
@@ -89,9 +87,59 @@
     </div>
     <!-- КОНЕЦ -->
 
+    <!-- Блок с фото и формой после хедера -->
+    <!-- НАЧАЛО -->
+    <div class="container-fluid first_block__photo" style="background-image: url(img/лого_комары.png);">
+        <div class="container">
+            <div class="row first_block__container">
+                <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
+                    <div class="first_block__text_content">
+                        <h1 class="first_block__main_text">Дезинсекция</h1>
+                        <ol class="first_block__list_with_text">
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">100% гарантия уничтожения насекомых и постгарантийная обработка</span>
+                            </li>
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Индивидуальный план обработки для каждого объекта</span>
+                            </li>
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Безопасность для вас, вашей семьи и питомцев - применяемые средства сертифицированы и не несут вреда людям и питомцам</span>
+                            </li>
+                            <li>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Работаем круглосуточно, 7 дней в неделю</span>
+                            </li>
+                        </ol>
+                        <p class="text-center first_block__link"><a href="tel:84993703647">8(499)370-36-47</a> | <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB">info@dezstancya.ru</a></p></div>
+                </div>
+                <div class="col-lg-4 col-md-5 first_block__send_form">
+                    <p class="send_form__main_text">Желаете задать вопрос?</p>
+                    <span class="send_form__text">Заполните форму и мы ответим при первой же возможности</span>
+                    <form class="send_form__form ">
+                        <input type="text" class="form-control send_form__input" placeholder="Имя" maxlength="100" aria-label="First name" required>
+                        <input type="number" class="form-control send_form__input" placeholder="Номер телефона для связи" maxlength="10" aria-label="Last name" required>
+                        <textarea type="text" class="form-control send_form__textarea" placeholder="Комментарий" maxlength="350" aria-label="Last name" required></textarea>
+                        <button class="btn btn-light own-create-btn send_form__button">Отправить</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+
+    <!-- Ввод -->
+    <!-- НАЧАЛО -->
+    <div class="container enter_to_dezincekciya__container mt-4 mb-5">
+        <div class="enter_to_dezincekciya__content">
+            <p class="enter_to_dezincekciya__text">Насекомые появились на Земле гораздо раньше человека. И постоянно сопровождают его, на протяжении всей жизни. Однако, нахождение насекомых в квартире противоречит нормам СЭС и опасно для жизни и здоровья жильцов.</p>
+            <p class="enter_to_dezincekciya__text">Для того, чтобы избавить свой дом от мелких вредителей необходимо проводить дезинсекцию.</p>
+            <p class="enter_to_dezincekciya__text">Дезинсекция — это комплекс мер по обработке помещения, не важно, будь то квартира или офис, от всех видов вредных насекомых. Заказать дезинсекцию можно не только для борьбы с уже поселившимися в доме насекомыми, но и для сезонной профилактики.</p>
+        </div>
+    </div>
+    <!-- КОНЕЦ -->
+    
     <!-- Форма отправки имя/телефона/почты -->
     <!-- НАЧАЛО -->
-    <div id="send_form" class="container-fluid pb-2 mb-5">
+    <div id="send_form" class="container-fluid pb-2">
         <div class="container container_of_the_form">
             <h4>Заполните форму и получите персональное предложение</h4>
             <div class="row g-4">
@@ -112,70 +160,128 @@
     </div>
     <!-- КОНЕЦ -->
 
-    <!-- Контент страницы -->
+    <!-- Главное содержание страницы --> 
     <!-- НАЧАЛО -->
-    <div class="container-fluid our_services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center h1">
-                    <span class="our_services__main_text">Уничтожение и выведение грызунов и насекомых</span>
-                </div>
-                <div class="offset-lg-3 col-lg-6 offset-md-2 col-md-7">
-                    <div class="hr"></div>
-                </div>
-                <div class="offset-lg-3 col-lg-6 offset-md-2 col-md-7 text-center">
-                    <p class="our_services__text">Мы - команда профессионалов с многолетним опытом работы в области дезинсекции, дератизации и медицинской дезинфекции</p>
-                </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/home.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для квартир</h3>
-                                <p class="one_card__content">Выведение насекомых, грызунов, плесени и грибка в квартирах</p>
-                                <p class="one_card__link">Узнать больше...</p>
+    <div class="container content-on-main-page">
+        <h1>Услуги <strong><span>Дезинсекции</span></strong></h1>
+        <p class="description"><br> Мы - профессионалы с многолетним опытом работы в области дезинсекции, дератизации, десерпентации, дезинфекции и фумигации</p>
+    </div>
+    <div class="container">
+        <div class="row align-item-center text-center">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/dezinfekcija.png" style="position: relative; z-index: 2;" alt=""> 
+                                </i>
                             </div>
-                        </a>
-                    </div>
+                            <h3 class="one_card__title title_shadow">дезинфекция</h3>
+                            <p class="one_card__content">Обработка от грибка, плесени и их спор</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/country.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для загородных участков</h3>
-                                <p class="one_card__content">уничтожение вредителей на загородных участках</p>
-                                <p class="one_card__link">Узнать больше...</p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/deratacija.png" alt=""> 
+                                </i>
                             </div>
-                        </a>
-                    </div>
+                            <h3 class="one_card__title title_shadow">дератизация</h3>
+                            <p class="one_card__content">Обработка от мышей, крыс, кротов, землероек</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-md-4 col-sm-6 text-center m-auto">
-                    <div class="one_card">
-                        <a href="">
-                            <div class="one_card__infa">
-                                <div class="one_card__icon">
-                                    <i class="fa"> 
-                                        <img src="img/home.png" style="position: relative; z-index: 2;" alt=""> 
-                                    </i>
-                                </div>
-                                <h3 class="one_card__title">для организаций</h3>
-                                <p class="one_card__content">Услуги по дезинсекции, дератации, дезодорации для организаций. Все виды сандокументов. </p>
-                                <p class="one_card__link">Узнать больше...</p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/dezinsekcija.png" alt=""> 
+                                </i>
                             </div>
-                        </a>
-                    </div>
+                            <h3 class="one_card__title title_shadow">дезинсекция</h3>
+                            <p class="one_card__content">Обработка от всех видов вредных насекомых</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/dezodoracija.png" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">дезодорация</h3>
+                            <p class="one_card__content">Защита и обработка от змей.</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">десерпентация</h3>
+                            <p class="one_card__content">Обработка деревянных строений от всех видов вредителей (взрослых особей и личинок)</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">фумигация</h3>
+                            <p class="one_card__content">Имеют сильно сплющенное сегментированное тельце. Его форма варьируется от округлой до веретенообразной</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
+                    <a href="">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">фумигация</h3>
+                            <p class="one_card__content">Имеют сильно сплющенное сегментированное тельце. Его форма варьируется от округлой до веретенообразной</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
+        <div class="hr"></div>
     </div>
     <!-- КОНЕЦ -->
 
