--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="our_services.html" class="top_menu_link">Наши услуги</a>
                     <a href="about_us.html" class="top_menu_link">О нас</a>
                     <a href="comments.html" class="top_menu_link">Отзывы</a>
-                    <a href="how_we_work.html" class="top_menu_link">Методы работы</a>
+                    <a href="methods_work.html" class="top_menu_link">Методы работы</a>
                     <a href="question-answer.html" class="top_menu_link">Вопрос-ответ</a>
                 </div>
                 <div class="col-lg-4 top_black_block text-center">
@@ -58,28 +58,25 @@
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дезинсекция</a>
+                                <a class="nav-link nav-link-text" href="dezincekciya.html">Дезинсекция</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дератизация</a>
+                                <a class="nav-link nav-link-text" href="deratizaciya.html">Дератизация</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Дезинфекция</a>
+                                <a class="nav-link nav-link-text" href="desinphekciya.html">Дезинфекция</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Десерпентация</a>
+                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Фумигация</a>
+                                <a class="nav-link nav-link-text" href="phymigaciya.html">Фумигация</a>
                             </li>  
                             <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
                             </li>
-                            <!-- <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Акции</a>
-                            </li> -->
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="#">Контакты</a>
+                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
