--- a/deratizaciya.html
+++ b/deratizaciya.html
@@ -143,20 +143,22 @@
     <div id="send_form" class="container-fluid pb-2">
         <div class="container container_of_the_form">
             <h4>Заполните форму и получите персональное предложение</h4>
-            <div class="row g-4">
-                <div class="col-lg-3 col-md-4">
-                    <input type="text" class="form-control container_of_the_form__input" placeholder="Имя" aria-label="First name" required>
+            <form action="">
+                <div class="row g-4">
+                    <div class="col-lg-3 col-md-4">
+                        <input type="text" class="form-control container_of_the_form__input" placeholder="Имя" aria-label="First name" required>
+                    </div>
+                    <div class="col-lg-3 col-md-4 m-auto mt-4">
+                        <input type="number" class="form-control container_of_the_form__input" placeholder="Номер телефона для связи" aria-label="Last name" required>
+                    </div>
+                    <div class="col-lg-3 col-md-4">
+                        <input type="text" class="form-control container_of_the_form__input" placeholder="Почта" aria-label="Last name" required>
+                    </div>
                 </div>
-                <div class="col-lg-3 col-md-4 m-auto mt-4">
-                    <input type="number" class="form-control container_of_the_form__input" placeholder="Номер телефона для связи" aria-label="Last name" required>
+                <div class="row">
+                    <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
                 </div>
-                <div class="col-lg-3 col-md-4">
-                    <input type="text" class="form-control container_of_the_form__input" placeholder="Почта" aria-label="Last name" required>
-                </div>
-            </div>
-            <div class="row">
-                <button type="submit" class="d-block col-lg-2 btn btn-danger m-auto mt-4 mb-4 container_of_the_form_button">Отправить</button>
-            </div>
+            </form>
         </div>
     </div>
     <!-- КОНЕЦ -->
@@ -242,14 +244,19 @@
                     <p class="text_on_page_deratizaciya__li_text"><strong>4. Утилизируем грызунов.Утилизируем грызунов.</strong> После уничтожения грызуны утилизируются, производится очистка и дезинфекция участка от следов жизнедеятельности.</p>
                 </li>
             </ul>
+            <p class="text_on_page_deratizaciya__gallary">
+                <img src="img/обработка 1.jpg" class="text_on_page_deratizaciya__img">
+                <img src="img/обработка 2.jpg" class="text_on_page_deratizaciya__img">
+                <img src="img/обработка 3.jpg" class="text_on_page_deratizaciya__img">
+            </p>
             <div class="hr"></div>
             <p class="text_on_page_deratizaciya__main_text">Борьба с подземными вредителями</p>
             <div class="hr"></div>
             <p class="text_on_page_deratizaciya__text">Уничтожение кротов, землероек и других грызунов, живущих под землей усложняется тем, что до животных гораздо сложнее добраться. В этом случае мы используем специальные ловушки, которые ставятся на выходе из тоннеля, а если ход известен – то и посередине. Специалист службы дератизации периодически приезжает на участок и убирает пойманных животных.</p>
             <p class="text_on_page_deratizaciya__gallary">
-                <img src="img/img_on_dexincekciya.jpg" class="text_on_page_deratizaciya__img">
-                <img src="img/img_on_dexincekciya1.jpg" class="text_on_page_deratizaciya__img">
-                <img src="img/img_on_dexincekciya2.jpg" class="text_on_page_deratizaciya__img">
+                <img src="img/контенер для мышей.jpg" class="text_on_page_deratizaciya__img">
+                <img src="img/контейнер для мышей 2.jpg" class="text_on_page_deratizaciya__img">
+                <img src="img/контейнер для мышей 3.jpg" class="text_on_page_deratizaciya__img">
             </p>
             <div class="hr"></div>
             <p class="text_on_page_deratizaciya__main_text">Дератизация помещений для юридических лиц</p>
@@ -282,7 +289,7 @@
                     </p>
                 </li>
             </ul>
-            <p class="text_on_page_deratizaciya__text"> После проведения процедуры в качестве подтверждения организация должна иметь на руках подтверждающий санитарный документ установленного образца.</p>
+            <blockquote> После проведения процедуры в качестве подтверждения организация должна иметь на руках подтверждающий санитарный документ установленного образца.</blockquote>
             <div class="hr"></div>
             <p class="text_on_page_deratizaciya__main_text">Почему самостоятельное уничтожение грызунов не работает?</p>
             <div class="hr"></div>
@@ -298,7 +305,7 @@
                     <p class="text_on_page_deratizaciya__li_text"><strong>3. Вы слишком мало знаете о грызунах.</strong> Специалисты службы дератизации знают особенности поведения грызунов, могут определить откуда они пришли и комплексно решать проблему. </p>
                 </li>
             </ul>
-            <p class="text_on_page_deratizaciya__text">Самостоятельное уничтожение грызунов может быть не только неэффективным, но и опасным — отравленная или напуганная крыса может сильно укусить, приведя к травме или инфекции!</p>
+            <blockquote>Самостоятельное уничтожение грызунов может быть не только неэффективным, но и опасным — отравленная или напуганная крыса может сильно укусить, приведя к травме или инфекции!</blockquote>
             <div class="hr"></div>
             <p class="text_on_page_deratizaciya__main_text">Почему стоит обратиться за услугами дератизации именно к нам? </p>
             <div class="hr"></div>
