--- a/dezincekciya.html
+++ b/dezincekciya.html
@@ -220,6 +220,22 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
                 <div class="one_card">
+                    <a href="dezincekciya/osi.html">
+                        <div class="one_card__infa">
+                            <div class="one_card__icon">
+                                <i class="fa"> 
+                                    <img src="img/osi (1).png" alt=""> 
+                                </i>
+                            </div>
+                            <h3 class="one_card__title title_shadow">осы</h3>
+                            <p class="one_card__content">Оса может на практике использовать свое жало по несколько раз, особенно это опасно для людей страдающих аллергией</p>
+                            <p class="one_card__link">Узнать больше...</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+                <div class="one_card">
                     <a href="dezincekciya/kleshhi.html">
                         <div class="one_card__infa">
                             <div class="one_card__icon">
