--- a/dezincekciya/kleshhi.html
+++ b/dezincekciya/kleshhi.html
@@ -107,7 +107,7 @@
                                 <span class="first_block__icon">&#10003;</span><span class="first_block__text">Гарантия результата - проводим бесплатно повторную обработку, если насекомые не исчезли</span>
                             </li>
                         </ol>
-                        <p class="text-center first_block__link"><a href="tel:84993703647">8(499)370-36-47</a> | <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB">info@dezstancya.ru</a></p></div>
+                        <p class="text-center first_block__link"><a href="tel:+380503559950">+38(050)-355-99-50</a> | <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB">dezsan.kh@gmail.com</a></p></div>
                 </div>
                 <div class="col-lg-4 col-md-5 first_block__send_form">
                     <p class="send_form__main_text">Желаете задать вопрос?</p>
